# Geode-Engine

./: CMakeLists.txt  README.md  g_components.h  g_entity.cpp  g_input.cpp  g_rendering.cpp  g_texture.cpp  g_time.cpp  g_ui.cpp  g_world.cpp  geode.h  geode_items.h  geode_ntn.cpp  geode_ntn.h  geode_uiextensions.cpp  geode_uiextensions.h
components/: collider.h  inventory.h  item.h  renderer.h  transform.h
